samples/_failures_safe/1761519041_c27736_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e7b40f40.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_e7b40f40.c:132:13: error: expected declaration or statement at end of input
  132 |             if (analyzer->words[j].count > analyzer->words[max_index].count) {
      |             ^~
./samples/SAFE/__tmp_e7b40f40.c:132:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e7b40f40.c:132:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e7b40f40.c:132:13: error: expected declaration or statement at end of input
